// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseInput /> should render 1`] = `
<View
  style={
    Array [
      Object {},
    ]
  }
>
  <View
    display="flex"
    flexDirection="column"
    position="relative"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "column",
          "position": "relative",
        },
      ]
    }
  >
    <View
      display="flex"
      flexDirection="row"
      justifyContent="space-between"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 0,
            "marginTop": 0,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 4,
              "marginRight": 16,
            },
          ]
        }
      >
        <View
          alignItems="center"
          display="flex"
          flexDirection="row"
          flexWrap="wrap"
          gap="spacing.0"
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "gap": 0,
              },
            ]
          }
        >
          <Text
            color="surface.text.subdued.lowContrast"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="bold"
            lineHeight={50}
            style={
              Array [
                Object {
                  "color": "hsla(217, 18%, 45%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "700",
                  "lineHeight": 16,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            Enter name
          </Text>
          <View
            style={
              Array [
                Object {
                  "borderColor": "black",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "clip": "rect(0 0 0 0)",
                  "clipPath": "inset(50%)",
                  "height": 1,
                  "left": -10000,
                  "marginBottom": -1,
                  "marginLeft": 0,
                  "marginRight": -1,
                  "marginTop": 0,
                  "overflow": "hidden",
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                },
              ]
            }
          >
            <Text
              color="surface.text.normal.lowContrast"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={200}
              style={
                Array [
                  Object {
                    "color": "hsla(217, 56%, 17%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      currentInteraction="default"
      display="flex"
      flexDirection="row"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
            "borderBottomColor": "hsla(216, 15%, 54%, 0.18)",
            "borderBottomStyle": "solid",
            "borderBottomWidth": 1,
            "borderTopLeftRadius": 2,
            "borderTopRightRadius": 2,
            "display": "flex",
            "flexDirection": "row",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <TextInput
        accessibilityDescribedBy=""
        accessibilityInvalid={false}
        accessibilityRequired={false}
        accessibilityState={
          Object {
            "disabled": false,
            "expanded": undefined,
          }
        }
        editable={true}
        id="name-1-input-2"
        isFocused={false}
        isTextArea={false}
        keyboardType="default"
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onEndEditing={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        onSubmitEditing={[Function]}
        secureTextEntry={false}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "hsla(216, 27%, 36%, 1)",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Lato",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "400",
              "height": 36,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 8,
              "textAlignVertical": "top",
              "textDecorationLine": "none",
              "width": "100%",
            },
          ]
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "hsla(213, 89%, 56%, 1)",
            "bottom": 0,
            "height": 1,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
          },
          Object {
            "opacity": undefined,
            "width": "undefined%",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "marginLeft": 0,
        },
      ]
    }
  >
    <View
      display="flex"
      flexDirection="row"
      justifyContent="flex-end"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`<BaseInput /> should render with icons 1`] = `
<View
  style={
    Array [
      Object {},
    ]
  }
>
  <View
    display="flex"
    flexDirection="column"
    position="relative"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "column",
          "position": "relative",
        },
      ]
    }
  >
    <View
      display="flex"
      flexDirection="row"
      justifyContent="space-between"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 0,
            "marginTop": 0,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 4,
              "marginRight": 16,
            },
          ]
        }
      >
        <View
          alignItems="center"
          display="flex"
          flexDirection="row"
          flexWrap="wrap"
          gap="spacing.0"
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "gap": 0,
              },
            ]
          }
        >
          <Text
            color="surface.text.subdued.lowContrast"
            fontFamily="text"
            fontSize={75}
            fontStyle="normal"
            fontWeight="bold"
            lineHeight={50}
            style={
              Array [
                Object {
                  "color": "hsla(217, 18%, 45%, 1)",
                  "fontFamily": "Lato",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "700",
                  "lineHeight": 16,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
                Object {},
              ]
            }
          >
            Enter name
          </Text>
          <View
            style={
              Array [
                Object {
                  "borderColor": "black",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "clip": "rect(0 0 0 0)",
                  "clipPath": "inset(50%)",
                  "height": 1,
                  "left": -10000,
                  "marginBottom": -1,
                  "marginLeft": 0,
                  "marginRight": -1,
                  "marginTop": 0,
                  "overflow": "hidden",
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                },
              ]
            }
          >
            <Text
              color="surface.text.normal.lowContrast"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="regular"
              lineHeight={200}
              style={
                Array [
                  Object {
                    "color": "hsla(217, 56%, 17%, 1)",
                    "fontFamily": "Lato",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      currentInteraction="default"
      display="flex"
      flexDirection="row"
      style={
        Array [
          Object {
            "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
            "borderBottomColor": "hsla(216, 15%, 54%, 0.18)",
            "borderBottomStyle": "solid",
            "borderBottomWidth": 1,
            "borderTopLeftRadius": 2,
            "borderTopRightRadius": 2,
            "display": "flex",
            "flexDirection": "row",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        alignItems="center"
        display="flex"
        flexDirection="row"
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          display="flex"
          style={
            Array [
              Object {
                "display": "flex",
                "paddingLeft": 12,
              },
            ]
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            align="xMidYMid"
            bbHeight="16px"
            bbWidth="16px"
            fill="none"
            focusable={false}
            height="16px"
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Array [
                  Object {},
                ],
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width="16px"
          >
            <RNSVGGroup
              fill={null}
              propList={
                Array [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8ZM10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12Z"
                fill={4282603381}
                fillRule={0}
                propList={
                  Array [
                    "fill",
                    "fillRule",
                  ]
                }
              />
              <RNSVGPath
                clipRule={0}
                d="M12 3C8.8711 3 6.22807 4.48937 4.23728 6.25113C2.24678 8.01264 0.822273 10.1194 0.105573 11.5528C-0.0351909 11.8343 -0.0351909 12.1657 0.105573 12.4472C0.822273 13.8806 2.24678 15.9874 4.23728 17.7489C6.22807 19.5106 8.8711 21 12 21C15.1289 21 17.7719 19.5106 19.7627 17.7489C21.7532 15.9874 23.1777 13.8806 23.8944 12.4472C24.0352 12.1657 24.0352 11.8343 23.8944 11.5528C23.1777 10.1194 21.7532 8.01264 19.7627 6.25113C17.7719 4.48937 15.1289 3 12 3ZM5.56272 16.2511C3.98954 14.8589 2.80913 13.2146 2.13142 12C2.80913 10.7854 3.98954 9.14106 5.56272 7.74887C7.3386 6.17729 9.5289 5 12 5C14.4711 5 16.6614 6.17729 18.4373 7.74887C20.0105 9.14106 21.1909 10.7854 21.8686 12C21.1909 13.2146 20.0105 14.8589 18.4373 16.2511C16.6614 17.8227 14.4711 19 12 19C9.5289 19 7.3386 17.8227 5.56272 16.2511Z"
                fill={4282603381}
                fillRule={0}
                propList={
                  Array [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
      <TextInput
        accessibilityDescribedBy=""
        accessibilityInvalid={false}
        accessibilityRequired={false}
        accessibilityState={
          Object {
            "disabled": false,
            "expanded": undefined,
          }
        }
        editable={true}
        id="name-31-input-32"
        isFocused={false}
        isTextArea={false}
        keyboardType="default"
        leadingIcon={[Function]}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onEndEditing={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        onSubmitEditing={[Function]}
        placeholder="First Last"
        secureTextEntry={false}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "hsla(216, 27%, 36%, 1)",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Lato",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "400",
              "height": 36,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 8,
              "textAlignVertical": "top",
              "textDecorationLine": "none",
              "width": "100%",
            },
          ]
        }
        trailingIcon={[Function]}
      />
      <View
        alignItems="center"
        display="flex"
        flexDirection="row"
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          display="flex"
          style={
            Array [
              Object {
                "display": "flex",
                "paddingRight": 12,
              },
            ]
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            align="xMidYMid"
            bbHeight="16px"
            bbWidth="16px"
            fill="none"
            focusable={false}
            height="16px"
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Array [
                  Object {},
                ],
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width="16px"
          >
            <RNSVGGroup
              fill={null}
              propList={
                Array [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                fill={4282603381}
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "hsla(213, 89%, 56%, 1)",
            "bottom": 0,
            "height": 1,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
          },
          Object {
            "opacity": undefined,
            "width": "undefined%",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "marginLeft": 0,
        },
      ]
    }
  >
    <View
      display="flex"
      flexDirection="row"
      justifyContent="flex-end"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          },
        ]
      }
    />
  </View>
</View>
`;
